# fitness-agent

./: .env  .gitignore  pyproject.toml
app/: main.py
app/chat/: api.py  graph.py  state.py
app/conf/: db_config.py  llm_config.py  settings.py
app/core/: llm_factory.py  logger.py  milvus_client.py  prompt_loader.py
app/data/: exercise_library.py  memory_manager.py  memory_milvus.py  mongo_client.py  training_log.py  user_profile.py
app/onboarding/: api.py  graph.py  state.py
app/plan/: api.py  graph.py  state.py  supervisor.py
app/plan/agents/: exercise_selector.py  safety_checker.py  split_designer.py  volume_planner.py
app/tools/: exercise_search.py
app/training/: api.py  graph.py  state.py  supervisor.py
app/training/agents/: fatigue_monitor.py  next_session_adjuster.py  progress_analyzer.py  quality_assessor.py
app/utils/: sse_utils.py
docs/superpowers/plans/: 2026-07-16-fitness-agent-implementation-plan.md
docs/superpowers/specs/: 2026-07-16-fitness-agent-design.md
prompts/: chat.prompt  memory_summary.prompt  onboarding.prompt  plan_generate.prompt
seeds/: exercise_seed.json
static/: index.html
static/css/: styles.css
static/js/: app.js
tests/: conftest.py  test_chat.py  test_onboarding.py  test_plan.py  test_training.py
